# workshop-temporal-genai-ingestion

./: .gitignore  README.md  TODO.md  pyproject.toml  template.env
avelbot/: app.py  pyproject.toml
avelbot-ingestion-py/: pyproject.toml
avelbot-ingestion-py/ressources/brest_transport_pre_scraped_pages/: palaren-un-belvedere-sur-rade-en-preparation.html
avelbot-ingestion-py/ressources/workflow_inputs/: part2-vect_pages_with_temporal.json  part2-vect_pages_with_temporal.yml  part4.a-scrape-only.yml  part4.b-crawl.yml  part5-chunking_recursive.yml
avelbot-ingestion-py/src/avelbot_ingestion/activities/: crawling_activity.py  fetch_sources_activity.py  index_source_no_chunk_activity.py  index_source_with_chunks_activity.py  print_source_activity.py  recursive_text_chunking_source_activity.py  save_sources_activity.py  scraping_activity.py
avelbot-ingestion-py/src/avelbot_ingestion/helpers/: deduplicate_sources.py  logging_config.py  rotating_proxy.py  url_helpers.py
avelbot-ingestion-py/src/avelbot_ingestion/models/: Chunk.py  IngestionWorkflowInput.py  RecursiveChunkingStageConfiguration.py  Source.py  SourceOptions.py  SourceStatusEnum.py
avelbot-ingestion-py/src/avelbot_ingestion/runners/: trigger_ingestion_workflow.py
avelbot-ingestion-py/src/avelbot_ingestion/worker/: main_worker.py  utils.py
avelbot-ingestion-py/src/avelbot_ingestion/workflows/: ingestion_workflow.py  run_say_hello_workflow.py  utils.py
avelbot-ingestion-py/src/avelbot_ingestion/workflows/stages/: crawling_stage.py  recursive_text_chunking_stage.py
avelbot-ingestion-ts/: package-lock.json  package.json  tsconfig.json
brest-transport-bot/: README.md  app.py  main.py  pyproject.toml
(+40 files in other folders)
