[project]
name = "avelbot-ingestion"
version = "0.1.0"
description = "Minimalist web Temporal IO ingestion Workflow"
readme = "README.md"
authors = [
    { name = "Benjamin BERNARD", email = "benjamin.bernard@arkea.com" }
]
requires-python = ">=3.10.6"
dependencies = [
    "datamodel-code-generator>=0.35.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "temporalio>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

