[project]
name = "avelbot-ingestion"
version = "0.1.0"
description = "Minimalist web Temporal IO ingestion Workflow"
readme = "README.md"
authors = [
    { name = "Benjamin BERNARD", email = "benjamin.bernard@arkea.com" }
]
requires-python = ">=3.10.6"
dependencies = [
    "datamodel-code-generator>=0.35.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "temporalio>=1.19.0",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-postgres>=0.0.16",
    "openai>=2.8.1",
    "psycopg[binary]>=3.2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

