[project]
name = "brest-transport-bot"
version = "0.1.0"
description = "Mini chatbot RAG Streamlit basé sur les actu transport de Brest Métropole"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-postgres>=0.0.16",
    "openai>=2.8.1",
    "psycopg[binary]>=3.2.12",
    "streamlit>=1.51.0",
]
